хп бар монстра и убрал минус значения

--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
     #monsterHealthDisplay {
     display: none;
     position: absolute;
-    bottom: 60px;
+    top: 10px;
+    /* bottom: 60px; */
     left: 50%;
     transform: translateX(-50%);
-    background: linear-gradient(to right, #ff416c 100%, #ff4b2b 100%);
+    background: linear-gradient(to right, #4144ff 100%, #00000000 100%);
     color: white;
     padding: 10px 20px;
     border-radius: 25px;
